Nao related parts are commented

--- a/ros_kinetic_ws/Dockerfile
+++ b/ros_kinetic_ws/Dockerfile
@@ -1,6 +1,8 @@
 FROM ros:kinetic-ros-base-xenial
 
 RUN apt-get update && apt-get install -y \
+      iproute2 \
+      telnet \
       iputils-ping \
       curl \
       libblas3 \
@@ -9,9 +11,20 @@ RUN apt-get update && apt-get install -y \
       gfortran \
       libc6 \
       ffmpeg \
+  #    ros-kinetic-naoqi-libqi \
+  #    ros-kinetic-naoqi-libqicore \
+  #    ros-kinetic-naoqi-bridge_msgs \
+  #    ros-kinetic-naoqi-driver \
       ros-kinetic-rqt \
       ros-kinetic-rqt-common-plugins&& \
     rm -rf /var/lib/apt/lists/*
+
+#WORKDIR /naoqi
+#ADD naoqi-sdk-2.1.4.13-linux64.tar.gz /naoqi/
+#ENV PYTHONPATH=${PYTHONPATH}:/naoqi/naoqi-sdk-2.1.4.13-linux64/lib/
+#ENV LD_LIBRARY_PATH="/naoqi/naoqi-sdk-2.1.4.13-linux64:$LD_LIBRARY_PATH"
+
+
 RUN curl "https://bootstrap.pypa.io/pip/2.7/get-pip.py" -o "get-pip.py"
 RUN python get-pip.py
 #RUN pip install --upgrade pip
@@ -24,12 +37,5 @@ RUN pip install pyvis
 #RUN pip install scikit-fuzzy
 RUN mkdir -p /home/catkin_ws/src
 
-#ENV PULSE_SERVER=host.docker.internal
-
 #ENV ROS_IP=10.0.1.23
 #ENV ROS_MASTER_URI=http://10.0.1.23:11311
-
-# launch ros package
-# CMD ["rosrun", "rqt_graph", "rqt_graph"]
-# COPY ros_kinetic_demo.launch ./
-# CMD ["roslaunch", "ros_kinetic_demo.launch"]
